--- a/README.org
+++ b/README.org
@@ -775,7 +775,7 @@ contenido.
 
 ** Mayo de 2020
 
-*** 01-May-20
+*** 1-May-20
 + [[https://www.isa-afp.org/entries/Gaussian_Integers.html][Gaussian integers in Isabelle/HOL]]. ~ Manuel Eberl. #ITP #IsabelleHOL #Math
 + [[https://www.isa-afp.org/entries/Power_Sum_Polynomials.html][Power sum polynomials and the Girard–Newton theorem in Isabelle/HOL]]. ~ Manuel Eberl. #ITP #IsabelleHOL #Math
 + [[https://arxiv.org/abs/1907.00205][The Ramanujan Machine: Automatically generated conjectures on fundamental constants]]. ~ Gal Raayoni et als. #MachineLearning #Math
@@ -783,12 +783,19 @@ contenido.
 + [[https://iokasimov.github.io/posts/2020/04/waterflow][Learn to moonwalk with waterflow problem]]. ~ Murat Kasimov. #Haskell #FunctionalProgramming
 + [[https://cs-syd.eu/posts/2020-04-28-genvalidity-improvements][Property testing in depth: genvalidity's fixed-size type generators]]. ~ Tom Sydney Kerckhove. #Haskell #QuickCheck
 
-*** 02-May-20
+*** 2-May-20
 + [[https://www.hcii.cmu.edu/news/2020/new-ai-enables-teachers-rapidly-develop-intelligent-tutoring-systems][New AI enables teachers to rapidly develop intelligent tutoring systems]]. #AI #Teaching
 + [[https://link.springer.com/content/pdf/10.1007%2F978-3-030-45190-5_24.pdf][Verified certification of reachability checking for timed automata]]. ~ Simon Wimmer, Joshua von Mutius. #ITP #IsabelleHOL 
 + [[https://link.springer.com/content/pdf/10.1007%2F978-3-030-45237-7_11.pdf][Formalized proofs of the infinity and normal form predicates in the first-order theory of rewriting]]. ~ Alexander Lochmann, Aart Middeldorp. #ITP #IsabelleHOL
 + [[https://arxiv.org/abs/2004.12030][Formal proof of the group law for Edwards elliptic curves]]. ~ Thomas Hales, Rodrigo Raya. #ITP #IsabelleHOL #Math
 + [[https://arxiv.org/abs/2004.12713 ][Formal adventures in convex and conical spaces]]. ~ Reynald Affeldt, Jacques Garrigue, Takafumi Saikawa. #ITP #Coq #Math
+
+*** 3-May-20
++ [[https://doisinkidney.com/posts/2020-05-02-more-random-access-lists.html][More random access lists]]. ~ Donnacha Oisín Kidney (@oisdk). #Haskell #FunctionalProgramming
++ [[https://escholarship.org/content/qt1623m1p3/qt1623m1p3.pdf ][History of Logo]]. ~ C. Solomon et als. #Logo #Programming
++ [[http://ojs.elte.hu/cejntrep/article/view/470/381][Interactive teaching of programming language theory with a proof assistant]]. ~ Horpácsi Dániel et als. #ITP #Coq 
++ [[http://ojs.elte.hu/cejntrep/article/view/399/386][A problem-based curriculum for algorithmic programming]]. ~ Nikházy László. #Programming
++ [[https://towardsdatascience.com/bye-bye-python-hello-julia-9230bff0df62][Bye-bye Python. Hello Julia!]] ~ Rhea Moutafis (@RheaMoutafis). #Python #JuliaLang #Programming
 
 * Lecturas anteriores
 + [[./Lecturas del año 2019.org][Lecturas del año 2019]]
