--- a/README.org
+++ b/README.org
@@ -946,6 +946,9 @@ contenido.
 + [[https://youtu.be/_3cYAsJClEg][Capítulo 1 de "Paradojas del nihilismo: La Academia": Desilusión]]. #Universidad
 + [[https://medium.com/syncedreview/new-latex-css-library-enables-websites-to-look-like-latex-docs-690a36e30f4b][New LaTeX.css library enables websites to look like LaTeX docs]]. #LaTeX #Math 
 
+*** 29-May-20
++ [[https://arxiv.org/abs/1910.12320][Formalising perfectoid spaces]]. ~ Kevin Buzzard, Johan Commelin, Patrick Massot. #ITP #LeanProver #Math
+
 * Lecturas anteriores
 + [[./Lecturas del año 2019.org][Lecturas del año 2019]]
 + [[./Lecturas del año 2018.org][Lecturas del año 2018]]
